Revert "MM-650: Resolve conflicts"
This reverts commit e885ab359bbbbe626d0fc6bd53f9498bac3a874d.